--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "build": "nwb build-react-component --copy-files",
+    "build:watch": "nwb build-react-component --copy-files --watch",
     "clean": "nwb clean-module && nwb clean-demo",
     "lint": "eslint src demo/src",
     "start": "nwb serve-react-demo",
