--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "build": "nwb build-react-component --copy-files",
     "build:watch": "nwb build-react-component --copy-files --watch",
     "clean": "nwb clean-module && nwb clean-demo",
+    "format": "prettier --write src",
     "lint": "eslint src demo/src",
     "start": "nwb serve-react-demo",
     "gh:publish": "nwb build-demo && gh-pages -d demo/dist"
   },
   "dependencies": {
+    "@pioneer-sdk/sdk": "1.1.29",
     "classnames": "^2.2.6",
     "emoji-js": "^3.5.0",
     "gh-pages": "^3.1.0",
+    "prettier": "^2.8.3",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react-highlight.js": "^1.0.7",
