--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "type": "git",
     "url": "https://github.com/asliddinusmonov/popup-chat-react"
   },
+  "engines" : {
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=14.0.0 <16.0.0"
+  },
   "keywords": [
     "react-popup",
     "react-chat",
