--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@pioneer-platform/pioneer-events": "8.1.39",
+    "axios": "^1.2.5",
     "classnames": "^2.2.6",
     "emoji-js": "^3.5.0",
     "gh-pages": "^3.1.0",
@@ -49,9 +50,9 @@
     "type": "git",
     "url": "https://github.com/asliddinusmonov/popup-chat-react"
   },
-  "engines" : {
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=14.0.0 <16.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=14.0.0 <=16.15.1"
   },
   "keywords": [
     "react-popup",
